Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
 
 <p>‘An Interactive Volumetric Display’ was a project that was spearheaded by Jesse Jurman and Cicely DiPaulo to make a true 3D display. This was a collaborative project by the SSE and several students from the RIT Center for Imaging Science The initial design and concept was based on a design by the University of Southern California’s Institute for Creative Technology’s Graphics Lab. The design involved a spinning mirror which was connected to a high-speed projector which displayed images based on what degree the mirror was turned. The original project page can be found here.</p>
 
-<p><img src="http://jrjurman.com/projects/volumetric-display/group.jpg" alt="'Members of both teams working on some of the initial research in the Imaging Science Undergrad lab'"></p>
+<p><img src="https://cloud.githubusercontent.com/assets/326557/13932494/9d793f90-ef7e-11e5-9762-ee440d2eda74.jpg" alt="'Members of both teams working on some of the initial research in the Imaging Science Undergrad lab'"></p>
 
 <p>The project spanned over an entire year and we had several students and faculty help from both the Software Engineering Department, and the Center for Imaging Science.</p>
 
-<p><img src="http://jrjurman.com/projects/volumetric-display/group2.jpg" alt="'The Construction of the Frame, which underwent many changes before our final display'"></p>
+<p><img src="https://cloud.githubusercontent.com/assets/326557/13932495/9d81a464-ef7e-11e5-8cec-97e8f47feaa8.jpg" alt="'The Construction of the Frame, which underwent many changes before our final display'"></p>
 
 <p>We were able to exhibit the display at the 2013 Imagine RIT festival, and we were featured for the project with other exhibits on various news outlets, including 13WHAM, the Democrat and Chronicle, and Channel 8 news.</p>
 
 <p>During the event we were given an award by Paychex, one of the sponsers of the Imagine RIT festival.</p>
 
-<p><img src="http://jrjurman.com/projects/volumetric-display/group3.jpg" alt="'The Construction of the Frame, which underwent many changes before our final display'"></p>
+<p><img src="https://cloud.githubusercontent.com/assets/326557/13932496/9d81d7e0-ef7e-11e5-9b73-0512a15c5242.jpg" alt="'The Construction of the Frame, which underwent many changes before our final display'"></p>
 
 <p>Some of the 3D models and scripts we used can be found on the GitHub Page, named SpaceJam.</p>
 
